containers/kubernetes/warmbet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warmbet
  namespace: nrocinu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warmbet
  template:
    metadata:
      labels:
        app: warmbet
    spec:
      containers:
        - name: warmbet
          image: registry.optirec.ml/warmbet:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
