containers/kubernetes/warmbet/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: warmbet
    namespace: nrocinu
spec:
    selector:
        app: warmbet
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
