containers/kubernetes/warmbet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: warmbet
    namespace: nrocinu
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 5G
        nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/auth-secret: warmbet-basic
        nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - OptiRec"
spec:
    ingressClassName: public
    rules:
        - host: warmbet.optirec.ml
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: warmbet
                            port:
                                number: 80
    tls:
        - secretName: tls-secret
